[package]
name = "tracing-filter"
version = "0.0.0-dev.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.59"

description = "experimental next-generation filtering support for tracing"

autotests = false

[dependencies]
compact_str = "0.3.2"
matchers = "0.1.0"
miette = "4.3.0"
once_cell = "1.10.0"
regex = "1.5.5"
smallvec = { version = "1.8.0", optional = true }
sorted-vec = "0.7.0"
thiserror = "1.0.30"
thread_local = "1.1.4"

[dependencies.tracing]
version = "0.2.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["std"]

[dependencies.tracing-core]
version = "0.2.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["registry", "std"]

[dev-dependencies]
insta = { version = "1.14.0", features = ["glob"] }
log = "0.4.16"
miette = { version = "4.3.0", features = ["fancy"] }

[dev-dependencies.tracing-subscriber]
version = "0.3.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["registry", "std", "tracing-log"]

[dev-dependencies.tracing-mock]
version = "0.2.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false

[[test]]
name = "lib"
