[package]
name = "tracing-mock"
version = "0.0.0-dev"
edition = "2021"
rust-version = "1.59"

autobins = false
autotests = false
autobenches = false

[dependencies]
bitflags = "1.3.2"

[dependencies.tracing]
version = "0.2.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["std"]

[dependencies.tracing-core]
version = "0.2.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.0"
git = "https://github.com/tokio-rs/tracing"
default-features = false
features = ["std", "registry"]
